fix: Allow cards to expend vertically if text doesn't fit

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -148,7 +148,7 @@ body {
 }
 
 .our-placed-card {
-  height: 6em;
+  min-height: 6em;
   background-color: #aaaaaa;
   margin: 3px;
   padding: 3px;
